# object_detection

./: .gitmodules  CMakeLists.txt  README.md  fix_include_dir.cmake  setup_environment.sh
config/: mesh_4pcs_config.yaml  mesh_models_config_drake_ex.yaml  mesh_models_config_ex.yaml  miqp_hod_config.yaml
src/: CMakeLists.txt  KinectDriver.cpp  histogramOfDistances.m  kinect_depth_msg_t.lcm  milp_mesh_model_detector.cpp  milp_multiple_mesh_models_detector.cpp  milp_multiple_mesh_models_detector_drake.cpp  miqp_4pcs_mesh_model_detector.cpp  miqp_4pcs_point_model_detector.cpp  miqp_histogram_of_distances_detector.cpp  miqp_point_model_detector.cpp  optimization_helpers.h  pcl_helpers.h  rotation_helpers.h  test3DRotationApprox.cpp  testMcCormickEnvelope.cpp
src/common/: common.hpp
src/remote_tree_viewer/: CMakeLists.txt  RemoteTreeViewerWrapper.cpp  RemoteTreeViewerWrapper.hpp  testRemoteTreeViewerWrapper.cpp
vision/: CMakeCache.txt  CMakeLists.txt  Makefile  PointCloudFactory.cpp  PointCloudFactory.hpp  PointCloudHandler.cpp  PointCloudHandler.hpp  bot_core_pointcloud_t.lcm  capturePointCloudFrame.cpp  cmake_install.cmake  kinectBridge.cpp  processDepthStream.cpp
vision/RGB-D_TestSet/: Kinect_1Box_OpenFloor.pcd  box.json  boxAngle.json  boxRotateAngle.json
vision/RGB-D_TestSet/pcd_files/: box_asus_rotate_topView.pcd
vision/kinect/: depth_msg_t.hpp  pointcloud_t.hpp
vision/libfreenect2-prefix/tmp/: libfreenect2-cfgcmd.txt
vision/tmp/: drake-cache-.cmake  drake-cfgcmd.txt  drc_core_utils-cfgcmd.txt  object_detection-cache-.cmake  object_detection-cfgcmd.txt  pcl-cache-.cmake  pcl-cfgcmd.txt
