add_library(RemoteTreeViewerWrapper SHARED RemoteTreeViewerWrapper.cpp)
target_link_libraries(RemoteTreeViewerWrapper lcm drakeRBM drakeOptimization drakeJoints drakeShapes drakeCommon z pthread)
install(TARGETS RemoteTreeViewerWrapper DESTINATION lib)

add_executable(testRemoteTreeViewerWrapper testRemoteTreeViewerWrapper.cpp)
target_link_libraries(testRemoteTreeViewerWrapper lcm drakeRBM drakeLcm drakeMultibodyParsers drakeOptimization drakeJoints drakeShapes drakeCommon yaml-cpp z pthread RemoteTreeViewerWrapper)
install(TARGETS testRemoteTreeViewerWrapper DESTINATION bin)